--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <input id="volume" type="range" min="0" max="1" step="0.01" value="0.8" aria-label="Volume" />
         </div>
         <button id="likeBtn" class="like" title="Favorite (F)" aria-label="Favorite">♡</button>
+        <button id="downloadBtn" class="icon-btn" title="Download" aria-label="Download"><i class="bi bi-cloud-arrow-down-fill"></i></button>
       </section>
 
       <footer class="shortcut-help">
